<resources>
    <string name="app_name">MyPlantCare</string>
    <string name="PlantName">Plant name</string>
    <string name="Specie">Specie</string>
    <string name="Birthday">Birthday</string>
    <string name="WateringReminder">Watering reminder</string>
    <string name="WaterEveryXDay1">Water every</string>
    <string name="WaterEveryXDay2">days</string>
    <string name="LastTimeWatered">Last time watered</string>
    <string name="Add">Add to my garden</string>
    <string name="AboutSpice">About Specie</string>
    <string name="Gallery">Gallery</string>
    <string name="EditPlant">Edit plant</string>
    <string name="Delete">Delete</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="Following"><![CDATA[>]]></string>
    <string name="Previous"><![CDATA[<]]></string>
</resources>
